--- a/tetroidz/package.json
+++ b/tetroidz/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "expo": "~54.0.23",
     "expo-font": "~14.0.9",
     "expo-status-bar": "~3.0.8",
