--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "@types/react": "^19.2.5",
     "@types/react-native": "^0.72.8"
+  },
+  "dependencies": {
+    "@react-navigation/native-stack": "^7.6.3"
   }
 }
